--- a/app/views/instructions/_instruction_template.html.erb
+++ b/app/views/instructions/_instruction_template.html.erb
@@ -19,7 +19,8 @@
 <script id="distribute-form-template" type="text/x-handlebars-template">
   <span class="instruction_description">Aspirates sufficient volume from the source well, then dispenses into each target well the volume requested, in the order specified.</span>
   <div class="row">
-      Volume: <%= text_field_tag :volume, "", class: "volume" %>
+    <br>
+      Enter volume to be distributed: <%= text_field_tag :volume, "", class: "volume" %>
   </div>
   <div class="row">
     <div class="col-md-6">
