--- a/app/views/runs/_success.html.erb
+++ b/app/views/runs/_success.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="modal-body success_form">
         <%= bootstrap_form_tag html: { id: "success_form" } do |f| %>
-          <%= f.text_area :json, class: "json", rows: "30", cols: "50" %>
+          <%= f.text_area :json, class: "json", rows: "30", cols: "50", label: "Preview of your run:"%>
         <% end %>
       </div>
       <div class="modal-footer">
