well selection adjustments

--- a/app/assets/stylesheets/instructionWorkspace.css.scss
+++ b/app/assets/stylesheets/instructionWorkspace.css.scss
@@ -5,3 +5,18 @@
   font-size: 14px;
   text-align: center;
 }
+
+
+#source, #destination {
+	width: 100%;
+	font-size: 1.2em;
+	display: inline-block;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+// .container_holder, .to, .from{
+// 	display: inline-block;
+// 	margin-right: auto;
+// 	margin-left: auto;
+// }
