fixed capitalization of pipette op

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -33,7 +33,9 @@ main.container {
     border-radius: 0 !important;
 }
 
-
+#container_list{
+  
+}
 
 #new_instruction_btn, #submit_run_btn {
   margin-right: auto;
