skeleton of transfer instruction template

--- a/app/views/instructions/_form.html.erb
+++ b/app/views/instructions/_form.html.erb
@@ -8,10 +8,10 @@
       <div class="modal-body">
         <div id="instruction_choices">
           <button data-instruction="distribute" class="instruction_type">Distribute</button>
-          <!-- <button data-instruction="transfer" class="instruction_type">Transfer</button>
-          <button data-instruction="consolidate" class="instruction_type">Consolidate</button>
-          <button data-instruction="mix" class="instruction_type">Mix</button>
+           <button data-instruction="transfer" class="instruction_type">Transfer</button>
           <button data-instruction="thermocycle" class="instruction_type">Thermocycle</button>
+          <!--<button data-instruction="consolidate" class="instruction_type">Consolidate</button>
+          <button data-instruction="mix" class="instruction_type">Mix</button>
           <button data-instruction="incubate" class="instruction_type" disabled>Incubate</button> -->
           <button data-instruction="seal" class="instruction_type">Seal</button>
           <button data-instruction="unseal" class="instruction_type">Unseal</button>
