--- a/app/assets/stylesheets/instructionWorkspace.css.scss
+++ b/app/assets/stylesheets/instructionWorkspace.css.scss
@@ -1,3 +1,27 @@
 #instruction_workspace {
   height: 422px;
 }
+
+
+#distribute_instruction_form {
+  display: none;
+}
+
+#transfer_instruction_form {
+  display: none;
+}
+
+#transfer-form-template {
+	.col-md-6{
+	  text-align: center;
+	}
+	.col-md-4{
+	  text-align: center;
+	  font-size: 1em;
+	}
+
+	.transfer_instruction{
+		text-align: center;
+		margin: 1em auto 1em auto !important;
+	}
+}
